2013-11-27  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search):
	* os.texi (Startup Summary): No more leim directory.

2013-11-26  Glenn Morris  <rgm@gnu.org>

	* os.texi (Startup Summary): Update for leim-list being preloaded.

2013-11-23  Brian Jenkins  <brian@brianjenkins.org>  (tiny change)

	* frames.texi (Input Focus):
	* hooks.texi (Standard Hooks): Mention focus-in-hook, focus-out-hook.

2013-11-23  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search):
	Empty elements in EMACSLOADPATH now mean the default load-path.

2013-11-22  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search): Minor clarification.

2013-11-20  Leo Liu  <sdl.web@gmail.com>

	* windows.texi (Choosing Window): Mention `no-display-ok'.  (Bug#13594)

2013-11-19  Xue Fuqiao  <xfq.free@gmail.com>

	* os.texi (File Notifications): Add an index.

	* loading.texi (Loading): Add an cross-reference.

2013-11-18  Xue Fuqiao  <xfq.free@gmail.com>

	* os.texi (Session Management, Desktop Notifications): Add some
	indexes and a cross-reference.

2013-11-17  Xue Fuqiao  <xfq.free@gmail.com>

	* os.texi (Time Parsing):
	(Processor Run Time, Input Modes, Terminal Output): Minor fixes.

2013-11-14  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search): Update section.

2013-11-11  Xue Fuqiao  <xfq.free@gmail.com>

	* os.texi (User Identification, Time of Day, Time Conversion):
	Minor fixes.

2013-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* keymaps.texi (Tool Bar): Mention that Gtk+/NS ignores item 1 to 3.

2013-11-09  Xue Fuqiao  <xfq.free@gmail.com>

	* os.texi (Startup Summary): Add an index about startup screen.
	Typo fix.
	(Command-Line Arguments): Add cross-reference for `dump-emacs'.

2013-11-08  Eli Zaretskii  <eliz@gnu.org>

	* display.texi (Truncation): Document that cache-long-scans is now
	non-nil by default.  (Bug#15797)

2013-11-05  Eli Zaretskii  <eliz@gnu.org>

	* lists.texi (Rearrangement): Fix indexing.
